Update dependencies, improve project configuration, and refine project.json files for libraries

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "iconsax-react": "^0.0.8",
     "lodash": "^4.17.21",
     "lottie-react": "^2.4.1",
-    "next": "~15.1.4",
+    "next": "15.2.5",
     "next-themes": "^0.4.4",
     "react": "19.0.0",
     "react-advanced-cropper": "^0.20.1",
@@ -42,50 +42,51 @@
     "@eslint/compat": "^1.1.1",
     "@eslint/eslintrc": "^2.1.1",
     "@eslint/js": "^9.8.0",
-    "@nx/eslint": "20.4.4",
-    "@nx/eslint-plugin": "20.4.4",
-    "@nx/jest": "20.4.4",
-    "@nx/js": "20.4.4",
-    "@nx/next": "20.4.4",
-    "@nx/react": "20.4.4",
-    "@nx/rollup": "20.4.4",
-    "@nx/workspace": "20.4.4",
+    "@nx/eslint": "21.3.11",
+    "@nx/eslint-plugin": "21.3.11",
+    "@nx/jest": "21.3.11",
+    "@nx/js": "21.3.11",
+    "@nx/next": "21.3.11",
+    "@nx/react": "21.3.11",
+    "@nx/rollup": "21.3.11",
+    "@nx/workspace": "21.3.11",
     "@rollup/plugin-url": "^8.0.2",
     "@svgr/rollup": "^8.1.0",
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
     "@testing-library/react": "16.1.0",
-    "@types/jest": "^29.5.12",
+    "@types/jest": "30.0.0",
     "@types/node": "18.16.9",
     "@types/react": "19.0.0",
     "@types/react-dom": "19.0.0",
     "autoprefixer": "10.4.13",
-    "babel-jest": "^29.7.0",
+    "babel-jest": "30.0.5",
     "core-js": "^3.36.1",
     "eslint": "^9.8.0",
-    "eslint-config-next": "14.2.16",
-    "eslint-config-prettier": "^9.0.0",
+    "eslint-config-next": "15.2.4",
+    "eslint-config-prettier": "10.0.0",
     "eslint-plugin-import": "2.31.0",
     "eslint-plugin-jsx-a11y": "6.10.1",
     "eslint-plugin-react": "7.35.0",
     "eslint-plugin-react-hooks": "5.0.0",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
+    "jest": "30.0.5",
+    "jest-environment-jsdom": "30.0.5",
     "jest-environment-node": "^29.7.0",
-    "nx": "20.4.4",
+    "nx": "21.3.11",
     "postcss": "8.4.38",
     "prettier": "^2.6.2",
     "prettier-plugin-organize-imports": "^4.1.0",
     "rollup": "^4.14.0",
     "sass": "^1.86.3",
     "tailwindcss": "3.4.3",
-    "ts-jest": "^29.1.0",
+    "ts-jest": "29.4.1",
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
-    "typescript": "~5.7.2",
+    "typescript": "5.8.3",
     "typescript-eslint": "^8.19.0",
-    "verdaccio": "^5.0.4"
+    "verdaccio": "6.0.5",
+    "jest-util": "30.0.5"
   },
   "nx": {
     "includedScripts": []
