--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -23,11 +23,11 @@
       "@/helpers": ["libs/helpers/src/index.ts"],
       "@/hooks": ["libs/hooks/src/index.ts"],
       "@/hooks/server": ["libs/hooks/src/server.ts"],
+      "@/layouts": ["libs/layouts/src/index.ts"],
       "@/providers": ["libs/providers/src/index.ts"],
       "@/store": ["libs/store/src/index.ts"],
       "@/types": ["libs/types/src/index.ts"],
-      "@/utilities": ["libs/utilities/src/index.ts"],
-      "@/layouts": ["libs/layouts/src/index.ts"]
+      "@/utilities": ["libs/utilities/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
