--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "iconsax-react": "^0.0.8",
     "lodash": "^4.17.21",
     "lottie-react": "^2.4.1",
+    "motion": "^12.23.12",
     "next": "15.2.5",
     "next-themes": "^0.4.4",
     "react": "19.0.0",
@@ -73,6 +74,7 @@
     "jest": "30.0.5",
     "jest-environment-jsdom": "30.0.5",
     "jest-environment-node": "^29.7.0",
+    "jest-util": "30.0.5",
     "nx": "21.3.11",
     "postcss": "8.4.38",
     "prettier": "^2.6.2",
@@ -85,8 +87,7 @@
     "tslib": "^2.3.0",
     "typescript": "5.8.3",
     "typescript-eslint": "^8.19.0",
-    "verdaccio": "6.0.5",
-    "jest-util": "30.0.5"
+    "verdaccio": "6.0.5"
   },
   "nx": {
     "includedScripts": []
